<resources>
    <string name="app_name">Hablemos</string>
    <string name="alumno">Estudiante</string>
    <string name="profesor">Profesor</string>
    <string name="email">Email</string>
    <string name="emailObligado">Email *</string>
    <string name="acceder">Acceder</string>
    <string name="password">Contraseña</string>
    <string name="passwordObligado">Contraseña *</string>
    <string name="preguntaRegistrado">¿No estás registrado?</string>
    <string name="preguntaCreaCuenta"><u>Crea una cuenta</u></string>
    <string name="nombre">Nombre *</string>
    <string name="nuevoEstudiante"><b>Nuevo estudiante</b></string>
    <string name="nuevoProfesor"><b>Nuevo profesor</b></string>
    <string name="apellidos">Apellidos *</string>
    <string name="fechaNacimientoFormato">dd/MM/yyyy</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="imagenPerfil">Imagen de su perfil:</string>
    <string name="sobreMi">Escribe que te gustaría que los demas supieran de ti</string>
    <string name="sobreMi2">Sobre mi</string>
    <string name="creaCuenta">Crear mi cuenta</string>
    <string name="inicial">inicial</string>
    <string name="title_activity_menu_estudiante">menuEstudianteActivity</string>
    <string name="Guardar">Guardar</string>
    <string name="cierreSesion">Cerrar Sesión</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>