<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:tag="@string/inicial"
    tools:context=".actividadesEstudiante.CrearNuevoEstudianteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevoEstudiante"
            android:textAlignment="center"
            android:textColor="#050505"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtNombreNewEstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtApellidosNewEstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEmailNewEstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/emailObligado"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtPasswordNewEstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/passwordObligado"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fechaNacimiento"
            android:textColor="#020202"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtDateNewEstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="date" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imagenPerfil"
                android:textAlignment="viewStart"
                android:textColor="#070707"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imgFotoNewEstActivity"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="40dp"
                android:layout_weight="10"
                android:tag="fotoPorDefecto"
                app:srcCompat="@drawable/plus_svgrepo_com" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtInfoNewEstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/sobreMi"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnCrearEstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="60dp"
            android:backgroundTint="#9C5DEC"
            android:text="@string/creaCuenta"
            app:cornerRadius="50dp" />

    </LinearLayout>
</ScrollView>