<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividadesProfesor.CrearNuevoProfesorActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/nuevoProfesor"
            android:textAlignment="center"
            android:textColor="#050505"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtNombreNewProfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtApellidosNewProfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEmailNewProfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/emailObligado"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtPasswordNewProfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/passwordObligado"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fechaNacimiento"
            android:textColor="#020202"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtDateNewProfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imagenPerfil"
                android:textAlignment="viewStart"
                android:textColor="#070707"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imgFotoNewProfActivity"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="10"
                android:clickable="true"
                app:srcCompat="@drawable/plus_svgrepo_com" />

        </LinearLayout>

        <EditText
            android:id="@+id/txtInfoNewProfActivity"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/sobreMi"
            android:inputType="textMultiLine|textPersonName" />

        <Button
            android:id="@+id/btnCrearProfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="60dp"
            android:backgroundTint="#9C5DEC"
            android:text="@string/creaCuenta"
            app:cornerRadius="50dp" />

    </LinearLayout>
</ScrollView>