<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividadesProfesor.ProfesorLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            app:srcCompat="@drawable/logo_hablemos__sin_bordes_" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/profesor"
            android:textAlignment="center"
            android:textColor="#040303"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtEmailLoginProfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtLoginPasswordProfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:password="false" />

        <Button
            android:id="@+id/btnAccederLoginProfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:backgroundTint="#9C5DEC"
            android:text="@string/acceder"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/preguntaRegistrado"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtCreaCuentaLoginProfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:text="@string/preguntaCreaCuenta"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>