<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividadesEstudiante.perfilEstudianteActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgPerfilEstActi"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:clickable="true"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/nombre"
            android:textColor="#020202"
            android:textColorHint="#1028C1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNombrePerfilEstActi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/apellidos"
            android:textColor="#020202"
            android:textColorHint="#050505"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtApellidoPerfilEstActi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/emailObligado"
            android:textColor="#020202"
            android:textColorHint="#050505"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEmailPerfilEstAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:enabled="false"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/passwordObligado"
            android:textColor="#020202"
            android:textColorHint="#050505"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPasswordPerfilEstActi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:inputType="textPersonName|textPassword" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fechaNacimiento"
            android:textColor="#020202"
            android:textColorHint="#050505"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEdadPerfilEstActi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/sobreMi2"
            android:textColor="#020202"
            android:textColorHint="#050505"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtInfoPerfilEstActi"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/sobreMi"
            android:inputType="textMultiLine|textPersonName" />

        <Button
            android:id="@+id/btnGuardaPerfilEstActi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="60dp"
            android:backgroundTint="#9C5DEC"
            android:text="@string/Guardar"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/btnCerSesionPerfilEstActi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="60dp"
            android:backgroundTint="#C31B1B"
            android:text="@string/cierreSesion"
            app:cornerRadius="50dp" />

    </LinearLayout>
</ScrollView>